Fixed navi viev on tablet

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
 /***************************************************************************/
 .navbar-default {
     background-color: #757575;
-    min-height:120px;
 }
 
 .navbar-brand {
@@ -16,16 +15,31 @@
     padding-top: 50px;
 }
 
-.navbar-header{
-    height:120px;
-}
 .navbar-toggle{
     padding: 20px 20px;
     margin-top: 20px;
     margin-right: 40px
 }
 .logo {
-    height: 50px;
+    height: 30px;
+}
+
+@media all and (min-width: 768px) {
+    .logo {
+        height: 50px;
+    }
+    .navbar-default {
+        min-height:120px;
+    }
+    .navbar-header{
+        height:120px;
+    }
+}
+
+@media all and (min-width: 768px) and (max-width: 992px) {
+    .navbar-default .navbar-nav > li > a {
+        font-size: 15px;
+    }
 }
 /***************************************************************************/
 /*                                zajawka                                  */
